2025-09-12  Zhengyi Fu  <i@fuzy.me>

	Fix file path handling in gptel-tools

	* site-lisp/gptel-tools.el: Ensure all file operations use
	expanded file names for consistent path handling.
	(gptel-tools--read-file): Use expand-file-name on filepath.
	(gptel-tools--list-directory): Use expand-file-name on directory.
	(gptel-tools--create-file): Use expand-file-name on path.
	(gptel-tools--write-file-async): Use expand-file-name on file-path.
	(gptel-tools--insert-async): Use expand-file-name on file-path.
	(gptel-tools--string-replace-async): Use expand-file-name on file-path.
	(gptel-tools--grep-async): Use expand-file-name on working-dir and default-directory.
	(gptel-tools--shell-command-async): Use expand-file-name on working-dir and default-directory.
	(gptel-tools--editor-diagnostics): Use expand-file-name on file-path.
	Also fix parameter names to match tool definitions.


2025-09-12  Zhengyi Fu  <i@fuzy.me>

	Simplify eshell configuration

	* init.el: Disable eshell visual commands and remove
	`eat-eshell-visual-command-mode' hook.

2025-09-12  Zhengyi Fu  <i@fuzy.me>

	Update gptel-tools

	* site-lisp/gptel-config.el: Remove JIRA tools.

	* site-lisp/gptel-tools.el (gptel-tools--ediff-buffers): Update docstring.
	(gptel-tools--url-retrieve): New helper function.
	(gptel-tools--read-url-async, gptel-tools--search-web-async): Use it.
	(gptel-tools-jira-host): New variable.
	(gptel-tools--get-jira-token, gptel-tools--search-jira-issues-async)
	(gptel-tools--get-jira-issue-async): New functions.
	("search_jira_issues", "get_jira_issue"): New gptel tools.

2025-09-12  Zhengyi Fu  <i@fuzy.me>

	Fix error when launching telega while in a tramp dir

	* site-lisp/telega-config.el (telega): Add advice to let-bind
	`default-directory' to `telega-cache-dir'.

2025-09-12  Zhengyi Fu  <i@fuzy.me>

	* early-init.el: Call `igc-start-idle-timer' on startup.

2025-09-12  Zhengyi Fu  <i@fuzy.me>

	Update gptel-tools documentation and fix function naming
